add emails and form

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
   <!-- FONT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-<!--   <link href="http://fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
- -->
+  <link href="http://fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="css/normalize.css">
@@ -35,19 +35,30 @@
     <div class="row">
       <div id="leftCol" class="seven columns">
         <div id="siteTitle">
-          <h2> this is a title </h2> <p>a paragraph</p>7
+          <h1> LensBricks</h1> <p>WE CONVERT LIGHT INTO INSIGHT</p>
         </div>
       </div>
-      <div id="rightCol" class="five columns">5</div>
+      <div id="rightCol" class="five columns"><h3>Want to learn more or partner with us? Drop us an email below:</h3>
 
-<!--         <h4>Basic Page</h4>
-        <p>This index.html page is a placeholder with the CSS, font and favicon. It's just waiting for you to add some content! If you need some help hit up the <a href="http://www.getskeleton.com">Skeleton documentation</a>.</p>
-      </div> -->
+      <p><h6>general inquiries:<a href="mailto:gaurav@lensbricks.com?Subject=General%20Inquiry">contact gaurav</a> </h6></p>
+
+      <p><h6>product inquiries:<a href="mailto:gaurav@lensbricks.com?Subject=Product%20Inquiry">contact gaurav</a> </h6></p>
+
+      <p><h6>keep me posted</h6></p>
+      <form id="mc-form">
+        <input id="mc-email" type ="email" placeholder="enter email here:" size="35">
+        <label for="mc-email"></label>
+        <button type="submit" style="display:none"></button>
+      </form>
+
+      </div>
+
+
     </div>
   </div>
 
     <footer>
-          <span class="navBtn">link1</span>
+          <span class="navBtn">insights@lensbricks.com</span>
           <span class="navBtn">link2</span>
           <span class="navBtn">link3</span>   
           <span class="navBtn">link4</span>
@@ -58,6 +69,7 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
   <script src="lensbricks.js"></script>
+  <script type="text/javascript" src="jquery.ajaxchimp.js"></script>
 
   <script>
 
