corrected form length, align site name and slogan

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Your page title here :)</title>
+  <title>LensBricks</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -35,20 +35,24 @@
     <div class="row">
       <div id="leftCol" class="seven columns">
         <div id="siteTitle">
-          <h1> LensBricks</h1> <p>WE CONVERT LIGHT INTO INSIGHT</p>
+          <h1 id="logoName"> LensBricks</h1> <p id="slogan">WE CONVERT LIGHT INTO INSIGHT</p>
         </div>
       </div>
-      <div id="rightCol" class="five columns"><h3>Want to learn more or partner with us? Drop us an email below:</h3>
+      <div id="rightCol" class="five columns"><h4>Want to learn more or partner with us? Drop us an email below:</h4>
 
       <p><h6>general inquiries:<a href="mailto:gaurav@lensbricks.com?Subject=General%20Inquiry">contact gaurav</a> </h6></p>
 
       <p><h6>product inquiries:<a href="mailto:gaurav@lensbricks.com?Subject=Product%20Inquiry">contact gaurav</a> </h6></p>
-
-      <p><h6>keep me posted</h6></p>
+      
+      <h6>keep me posted</h6>
       <form id="mc-form">
-        <input id="mc-email" type ="email" placeholder="enter email here:" size="35">
-        <label for="mc-email"></label>
-        <button type="submit" style="display:none"></button>
+        <div class ="row">
+          <div class="twelve columns">
+            <input class="u-full-width" id="mc-email" type ="email" placeholder="enter email here:" >
+            <label for="mc-email"></label>
+            <button type="submit" style="display:none"></button>
+          </div>
+        </div>
       </form>
 
       </div>
