--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/skeleton.css">
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -39,11 +40,12 @@
         </div>
       </div>
       <div id="rightCol" class="five columns"><h4>Want to learn more or partner with us? Drop us an email below:</h4>
+      <hr>
+      <p><h6>general inquiries:<a href="mailto:gaurav@lensbricks.com?Subject=General%20Inquiry"> contact gaurav</a> </h6></p>
 
-      <p><h6>general inquiries:<a href="mailto:gaurav@lensbricks.com?Subject=General%20Inquiry">contact gaurav</a> </h6></p>
 
-      <p><h6>product inquiries:<a href="mailto:gaurav@lensbricks.com?Subject=Product%20Inquiry">contact gaurav</a> </h6></p>
-      
+      <p><h6>product inquiries:<a href="mailto:gaurav@lensbricks.com?Subject=Product%20Inquiry"> contact gaurav</a> </h6></p>
+      <hr id="pig">
       <h6>keep me posted</h6>
       <form id="mc-form">
         <div class ="row">
@@ -51,6 +53,7 @@
             <input class="u-full-width" id="mc-email" type ="email" placeholder="enter email here:" >
             <label for="mc-email"></label>
             <button type="submit" style="display:none"></button>
+
           </div>
         </div>
       </form>
@@ -62,10 +65,10 @@
   </div>
 
     <footer>
-          <span class="navBtn">insights@lensbricks.com</span>
-          <span class="navBtn">link2</span>
-          <span class="navBtn">link3</span>   
-          <span class="navBtn">link4</span>
+          <span class="navBtn"><a href="about.html">about us</a></span>
+          <span class="navBtn"><a href="team.html">team</a></span>
+          <span class="navBtn"><a href="https://www.facebook.com/pages/Lensbricks/344441472362457"><i class="fa fa-facebook-square"></i></a></span>   
+          <span class="navBtn"><a href="https://twitter.com/lensbricks"><i class="fa fa-twitter-square"></i></a></span>
           <span class="navBtn">link5</span>              
     </footer>
 
