add team content

--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
           <h1 id="logoName"> LensBricks</h1> <p id="slogan">WE CONVERT LIGHT INTO INSIGHT</p>
         </div>
       </div>
+
+      <!-- this is the about page -->
       <div id="rightCol" class="five columns"><h4>Want to learn more or partner with us? Drop us an email below:</h4>
       <hr>
       <p><h6>general inquiries:<a href="mailto:gaurav@lensbricks.com?Subject=General%20Inquiry"> contact gaurav</a> </h6></p>
-
-
       <p><h6>product inquiries:<a href="mailto:gaurav@lensbricks.com?Subject=Product%20Inquiry"> contact gaurav</a> </h6></p>
       <hr id="pig">
       <h6>keep me posted</h6>
@@ -57,10 +57,7 @@
           </div>
         </div>
       </form>
-
       </div>
-
-
     </div>
   </div>
 
