teamcontent with hr separators

--- a/team.html
+++ b/team.html
@@ -6,3 +6,21 @@
 		Education:Indian Institute of Technology, Kharagpur</p>
 	</div>
 </div>
+<hr>
+<div class="person">
+	<div class="headshot"><img src="images/Gaurav.png"></div>
+	<div class="bio"><h2>Gaurav Agarwal</h2>
+		<p clas="title">Business Development at LensBricks</p>
+		<p>Previous: Barclays Investment Bank, JFDI.Asia - Joyful Frog Digital Incubator, Lean Startup Machine
+		Education:Indian Institute of Technology, Kharagpur</p>
+	</div>
+</div>
+<hr>
+<div class="person">
+	<div class="headshot"><img src="images/Gaurav.png"></div>
+	<div class="bio"><h2>Gaurav Agarwal</h2>
+		<p clas="title">Business Development at LensBricks</p>
+		<p>Previous: Barclays Investment Bank, JFDI.Asia - Joyful Frog Digital Incubator, Lean Startup Machine
+		Education:Indian Institute of Technology, Kharagpur</p>
+	</div>
+</div>
