fix font awsome

--- a/team.html
+++ b/team.html
@@ -24,3 +24,14 @@
 		Education:Indian Institute of Technology, Kharagpur</p>
 	</div>
 </div>
+
+<h6>keep me posted</h6>
+      <form id="mc-form">
+        <div class ="row">
+          <div class="twelve columns">
+            <input class="u-full-width" id="mc-email" type ="email" placeholder="enter email here:" >
+            <label for="mc-email"></label>
+            <button type="submit" style="display:none"></button>
+          </div>
+        </div>
+      </form>
