--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
 
   <!-- FONT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="stylesheet" href="css/font-awesome.css">
   <link href="http://fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/skeleton.css">
-  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+ 
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -45,7 +46,8 @@
       <hr>
       <p><h6>general inquiries:<a href="mailto:gaurav@lensbricks.com?Subject=General%20Inquiry"> contact gaurav</a> </h6></p>
       <p><h6>product inquiries:<a href="mailto:gaurav@lensbricks.com?Subject=Product%20Inquiry"> contact gaurav</a> </h6></p>
-      <hr id="pig">
+      <hr>
+
       <h6>keep me posted</h6>
       <form id="mc-form">
         <div class ="row">
@@ -53,19 +55,19 @@
             <input class="u-full-width" id="mc-email" type ="email" placeholder="enter email here:" >
             <label for="mc-email"></label>
             <button type="submit" style="display:none"></button>
-
           </div>
         </div>
       </form>
+
       </div>
     </div>
   </div>
 
     <footer>
-          <span class="navBtn"><a href="about.html">about us</a></span>
+          <span class="navBtn"><a href="about.html">about</a></span>
           <span class="navBtn"><a href="team.html">team</a></span>
-          <span class="navBtn"><a href="https://www.facebook.com/pages/Lensbricks/344441472362457"><i class="fa fa-facebook-square"></i></a></span>   
-          <span class="navBtn"><a href="https://twitter.com/lensbricks"><i class="fa fa-twitter-square"></i></a></span>
+          <span class="navBtn"><a href="https://www.facebook.com/pages/Lensbricks/344441472362457"><i class="fa fa-facebook"></i></a></span>   
+          <span class="navBtn"><a href="https://twitter.com/lensbricks"><i class="fa fa-twitter"></i></a></span>
           <span class="navBtn">link5</span>              
     </footer>
 
