--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <span class="navBtn"><a href="team.html">team</a></span>
           <span class="navBtn"><a href="https://www.facebook.com/pages/Lensbricks/344441472362457"><i class="fa fa-facebook"></i></a></span>   
           <span class="navBtn"><a href="https://twitter.com/lensbricks"><i class="fa fa-twitter"></i></a></span>
-          <span class="navBtn">link5</span>              
+          <span class="navBtn"><a href="https://plus.google.com/+RajiLensBricks/posts"><i class="fa fa-google-plus"></i></a></span>              
     </footer>
 
 
