add new so-called-pages

--- a/index.html
+++ b/index.html
@@ -1,84 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+    <head>
+        <meta charset="utf-8">
+        <title>LensBricks</title>
+        <meta name="description" content="">
+        <meta name="author" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- Basic Page Needs
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <meta charset="utf-8">
-  <title>LensBricks</title>
-  <meta name="description" content="">
-  <meta name="author" content="">
+        <link rel="stylesheet" href="css/font-awesome.css">
+        <link href="http://fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
 
-  <!-- Mobile Specific Metas
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/skeleton.css">
 
-  <!-- FONT
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="stylesheet" href="css/font-awesome.css">
-  <link href="http://fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+        <link rel="icon" type="image/png" href="images/favicon.png">
+    </head>
 
-  <!-- CSS
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/skeleton.css">
- 
-
-  <!-- Favicon
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="images/favicon.png">
-
-</head>
 <body>
+    <div class="container">
+        <div class="row">
 
-  <!-- Primary Page Layout
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <div class="container">
-    <div class="row">
-      <div id="leftCol" class="seven columns">
-        <div id="siteTitle">
-          <h1 id="logoName"> LensBricks</h1> <p id="slogan">WE CONVERT LIGHT INTO INSIGHT</p>
+            <div id="leftCol" class="seven columns">
+                <div id="siteTitle">
+                    <h1 id="logoName"> LensBricks</h1> <p id="slogan">WE CONVERT LIGHT INTO INSIGHT</p>
+                </div>
+            </div>
+
+            <div id="rightCol" class="five columns">
+
+                <!-- about page -->            
+                <section id="aboutPage" class="page"> 
+                    <h4>Want to learn more or partner with us? Drop us an email below:</h4>
+                    <hr>
+                    <h6>general inquiries:<a href="mailto:gaurav@lensbricks.com?Subject=General%20Inquiry"> contact gaurav</a> </h6>
+                    <h6>product inquiries:<a href="mailto:gaurav@lensbricks.com?Subject=Product%20Inquiry"> contact gaurav</a> </h6>
+                    <hr>
+                    <h6>keep me posted</h6>
+                    <form id="mc-form">
+                        <input class="u-full-width" id="mc-email" type ="email" placeholder="enter email here:" >
+                        <label for="mc-email"></label>
+                        <button type="submit" style="display:none"></button>
+                    </form>
+                </section>
+
+                <!-- team page -->
+                <section id="teamPage" class="page">
+
+                </section>
+
+            </div>
+
         </div>
-      </div>
-
-      <!-- this is the about page -->
-      <div id="rightCol" class="five columns"><h4>Want to learn more or partner with us? Drop us an email below:</h4>
-      <hr>
-      <p><h6>general inquiries:<a href="mailto:gaurav@lensbricks.com?Subject=General%20Inquiry"> contact gaurav</a> </h6></p>
-      <p><h6>product inquiries:<a href="mailto:gaurav@lensbricks.com?Subject=Product%20Inquiry"> contact gaurav</a> </h6></p>
-      <hr>
-
-      <h6>keep me posted</h6>
-      <form id="mc-form">
-        <div class ="row">
-          <div class="twelve columns">
-            <input class="u-full-width" id="mc-email" type ="email" placeholder="enter email here:" >
-            <label for="mc-email"></label>
-            <button type="submit" style="display:none"></button>
-          </div>
-        </div>
-      </form>
-
-      </div>
     </div>
-  </div>
 
     <footer>
-          <span class="navBtn"><a href="about.html">about</a></span>
-          <span class="navBtn"><a href="team.html">team</a></span>
-          <span class="navBtn"><a href="https://www.facebook.com/pages/Lensbricks/344441472362457"><i class="fa fa-facebook"></i></a></span>   
-          <span class="navBtn"><a href="https://twitter.com/lensbricks"><i class="fa fa-twitter"></i></a></span>
-          <span class="navBtn"><a href="https://plus.google.com/+RajiLensBricks/posts"><i class="fa fa-google-plus"></i></a></span>              
+        <span class="navBtn">about</span>
+        <span class="navBtn">team</span>
+        <span class=""><a href="https://www.facebook.com/pages/Lensbricks/344441472362457"><i class="fa fa-facebook"></i></a></span>   
+        <span class=""><a href="https://twitter.com/lensbricks"><i class="fa fa-twitter"></i></a></span>
+        <span class="navBtn">link5</span>              
     </footer>
 
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="lensbricks.js"></script>
+    <script type="text/javascript" src="jquery.ajaxchimp.js"></script>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-  <script src="lensbricks.js"></script>
-  <script type="text/javascript" src="jquery.ajaxchimp.js"></script>
+    <script>
 
-  <script>
-
-  </script>
+    </script>
 </body>
+
 </html>
