--- a/index.html
+++ b/index.html
@@ -45,6 +45,43 @@
 
                 <!-- team page -->
                 <section id="teamPage" class="page">
+                    <div class="person">
+    <div class="headshot"><img src="images/Gaurav.png"></div>
+    <div class="bio"><h2>Gaurav Agarwal</h2>
+        <p clas="title">Business Development at LensBricks</p>
+        <p>Previous: Barclays Investment Bank, JFDI.Asia - Joyful Frog Digital Incubator, Lean Startup Machine
+        Education:Indian Institute of Technology, Kharagpur</p>
+    </div>
+</div>
+<hr>
+<div class="person">
+    <div class="headshot"><img src="images/Gaurav.png"></div>
+    <div class="bio"><h2>Gaurav Agarwal</h2>
+        <p clas="title">Business Development at LensBricks</p>
+        <p>Previous: Barclays Investment Bank, JFDI.Asia - Joyful Frog Digital Incubator, Lean Startup Machine
+        Education:Indian Institute of Technology, Kharagpur</p>
+    </div>
+</div>
+<hr>
+<div class="person">
+    <div class="headshot"><img src="images/Gaurav.png"></div>
+    <div class="bio"><h2>Gaurav Agarwal</h2>
+        <p clas="title">Business Development at LensBricks</p>
+        <p>Previous: Barclays Investment Bank, JFDI.Asia - Joyful Frog Digital Incubator, Lean Startup Machine
+        Education:Indian Institute of Technology, Kharagpur</p>
+    </div>
+</div>
+
+<h6>keep me posted</h6>
+      <form id="mc-form">
+        <div class ="row">
+          <div class="twelve columns">
+            <input class="u-full-width" id="mc-email" type ="email" placeholder="enter email here:" >
+            <label for="mc-email"></label>
+            <button type="submit" style="display:none"></button>
+          </div>
+        </div>
+      </form>
 
                 </section>
 
@@ -58,7 +95,7 @@
         <span class="navBtn">team</span>
         <span class=""><a href="https://www.facebook.com/pages/Lensbricks/344441472362457"><i class="fa fa-facebook"></i></a></span>   
         <span class=""><a href="https://twitter.com/lensbricks"><i class="fa fa-twitter"></i></a></span>
-        <span class="navBtn">link5</span>              
+        <span class="navBtn"></span>              
     </footer>
 
 
