change normalize css line 255 for form inheritance

--- a/index.html
+++ b/index.html
@@ -39,50 +39,49 @@
                     <form id="mc-form">
                         <input class="u-full-width" id="mc-email" type ="email" placeholder="enter email here:" >
                         <label for="mc-email"></label>
-                        <button type="submit" style="display:none"></button>
+                        <!-- <button type="submit" style="display:none"></button> -->
                     </form>
                 </section>
 
                 <!-- team page -->
                 <section id="teamPage" class="page">
                     <div class="person">
-    <div class="headshot"><img src="images/Gaurav.png"></div>
-    <div class="bio"><h2>Gaurav Agarwal</h2>
-        <p clas="title">Business Development at LensBricks</p>
-        <p>Previous: Barclays Investment Bank, JFDI.Asia - Joyful Frog Digital Incubator, Lean Startup Machine
-        Education:Indian Institute of Technology, Kharagpur</p>
-    </div>
-</div>
-<hr>
-<div class="person">
-    <div class="headshot"><img src="images/Gaurav.png"></div>
-    <div class="bio"><h2>Gaurav Agarwal</h2>
-        <p clas="title">Business Development at LensBricks</p>
-        <p>Previous: Barclays Investment Bank, JFDI.Asia - Joyful Frog Digital Incubator, Lean Startup Machine
-        Education:Indian Institute of Technology, Kharagpur</p>
-    </div>
-</div>
-<hr>
-<div class="person">
-    <div class="headshot"><img src="images/Gaurav.png"></div>
-    <div class="bio"><h2>Gaurav Agarwal</h2>
-        <p clas="title">Business Development at LensBricks</p>
-        <p>Previous: Barclays Investment Bank, JFDI.Asia - Joyful Frog Digital Incubator, Lean Startup Machine
-        Education:Indian Institute of Technology, Kharagpur</p>
-    </div>
-</div>
+                        <div class="headshot"><img class="bioHead" src="images/Gaurav.png"></div>
+                        <div class="bio"><h2>Gaurav Agarwal</h2>
+                            <p clas="title">Business Development at LensBricks</p>
+                            <p>Previous: Barclays Investment Bank, JFDI.Asia - Joyful Frog Digital Incubator, Lean Startup Machine
+                            Education:Indian Institute of Technology, Kharagpur</p>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="person">
+                        <div class="headshot"><img class="bioHead" src="images/Gaurav.png" ></div>
+                        <div class="bio"><h2>Gaurav Agarwal</h2>
+                            <p clas="title">Business Development at LensBricks</p>
+                            <p>Previous: Barclays Investment Bank, JFDI.Asia - Joyful Frog Digital Incubator, Lean Startup Machine
+                            Education:Indian Institute of Technology, Kharagpur</p>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="person">
+                        <div class="headshot"><img class="bioHead" src="images/Gaurav.png"></div>
+                        <div class="bio"><h2>Gaurav Agarwal</h2>
+                            <p clas="title">Business Development at LensBricks</p>
+                            <p>Previous: Barclays Investment Bank, JFDI.Asia - Joyful Frog Digital Incubator, Lean Startup Machine
+                            Education:Indian Institute of Technology, Kharagpur</p>
+                        </div>
+                    </div>
 
-<h6>keep me posted</h6>
-      <form id="mc-form">
-        <div class ="row">
-          <div class="twelve columns">
-            <input class="u-full-width" id="mc-email" type ="email" placeholder="enter email here:" >
-            <label for="mc-email"></label>
-            <button type="submit" style="display:none"></button>
-          </div>
-        </div>
-      </form>
-
+                    <h6>keep me posted</h6>
+                          <form id="mc-form">
+                            <div class ="row">
+                              <div class="twelve columns">
+                                <input class="u-full-width" id="mc-email" type ="email" placeholder="enter email here:" >
+                                <label for="mc-email"></label>
+                                <button type="submit" style="display:none"></button>
+                              </div>
+                            </div>
+                          </form>
                 </section>
 
             </div>
