chang the footer nav to fixed

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <form id="mc-form">
                         <input class="u-full-width" id="mc-email" type ="email" placeholder="enter email here:" >
                         <label for="mc-email"></label>
-                        <!-- <button type="submit" style="display:none"></button> -->
+                        <button type="submit" style="display:none"></button>
                     </form>
                 </section>
 
