--- a/index.html
+++ b/index.html
@@ -36,11 +36,40 @@
                     <h6>product inquiries:<a href="mailto:gaurav@lensbricks.com?Subject=Product%20Inquiry"> contact gaurav</a> </h6>
                     <hr>
                     <h6>keep me posted</h6>
-                    <form id="mc-form">
+<!--                     <form id="mc-form">
                         <input class="u-full-width" id="mc-email" type ="email" placeholder="enter email here:" >
                         <label for="mc-email"></label>
                         <button type="submit" style="display:none"></button>
-                    </form>
+                    </form> -->
+
+<!-- Begin MailChimp Signup Form -->
+<link href="//cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
+<style type="text/css">
+    #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+    /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+       We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+</style>
+<div id="mc_embed_signup">
+<form action="//tumblr.us10.list-manage.com/subscribe/post?u=e0108db9bbd8f6146171f672a&amp;id=ffb11e0ec4" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+    <div id="mc_embed_signup_scroll">
+   <!--  <h2>Subscribe to our mailing list</h2> -->
+<div class="mc-field-group">
+    <label for="mce-EMAIL">Email Address </label>
+    <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+</div>
+    <div id="mce-responses" class="clear">
+        <div class="response" id="mce-error-response" style="display:none"></div>
+        <div class="response" id="mce-success-response" style="display:none"></div>
+    </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    <div style="position: absolute; left: -5000px;"><input type="text" name="b_e0108db9bbd8f6146171f672a_ffb11e0ec4" tabindex="-1" value=""></div>
+    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+    </div>
+</form>
+</div>
+<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+<!--End mc_embed_signup-->
+
+
                 </section>
 
                 <!-- team page -->
@@ -73,6 +102,7 @@
                     </div>
 
                     <h6>keep me posted</h6>
+                          
                           <form id="mc-form">
                             <div class ="row">
                               <div class="twelve columns">
@@ -82,6 +112,8 @@
                               </div>
                             </div>
                           </form>
+
+                          <p><br></p>
                 </section>
 
             </div>
@@ -105,6 +137,11 @@
     <script>
 
     </script>
+
+
+
+
+
 </body>
 
 </html>
