fixed blur, made blur happen

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     </head>
 
 <body>
+    <div id="bkgdBlur"></div>
+    <div id="bkgdMain"></div>
     <div class="container">
         <div class="row">
 
